Tests/CarlTests/CompilerTests/positive/excitable-medium.carl
automaton ExcitableMedium {
    world {
        states {
            Quiescent,
            Excited,
            Refractory1,
            Refractory2,
            Refractory3,
            Refractory4,
            Refractory5,
            Refractory6
        }
        neighborhood: Moore(1)
        dimension: 2
    }


    rules {
        Quiescent -> Excited when count_neighbors(Excited) > 0
        Excited -> Refractory1
        Refractory1 -> Refractory2
        Refractory2 -> Refractory3
        Refractory3 -> Refractory4
        Refractory4 -> Refractory5
        Refractory5 -> Refractory6
        Refractory6 -> Quiescent
    }
}
