Tests/CarlTests/CompilerTests/negative/non-boolean-condition.carl
automaton GameOfLife {
    world {
        states { Dead, Alive }
        neighborhood: Moore(1)
        dimension: 2
    }

    rules {
        Dead -> Alive when 45
        Alive -> Dead when count_neighbors(Alive) < 2 or count_neighbors(Alive) > 3
    }
}
